# climan

./: .gitignore  Cargo.toml  LICENSE  README.md  schema.json
.github/: CODEOWNERS
.github/workflows/: release.yml
assets/: skin.yaml
src/: climan.rs  main.rs
src/climan/: model.rs  request.rs  workflow.rs
tests/: context.yaml  context2.yaml  echo.json  request.yaml  test.yaml  workflow.yaml
