[package]
name = "climan"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
jsonpath = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.11", features = ["derive"] }
httpmock = "0.6"
log = "0.4"
env_logger = "0.10"
simplelog = { version = "0.12", features = ["paris"] }
test-log = "0.2"
dotenv = "0.15"
schemars = "0.8"
strum = { version = "0.25", features = ["derive"] }

[package.metadata.cross.target.aarch64-apple-darwin]
xargo = false
image = "freeznet/aarch64-apple-darwin-cross:11.3.1"

[package.metadata.cross.target.x86_64-apple-darwin]
xargo = false
image = "freeznet/x86_64-apple-darwin-cross:11.3.1"
