[package]
name = "climan"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
jsonpath = "0.1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
simplelog = "0.12"
strum = { version = "0.26", features = ["derive"] }
termimad = "0.29"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
httpmock = "0.6"
test-log = "0.2"

[package.metadata.cross.target.aarch64-apple-darwin]
xargo = false
image = "freeznet/aarch64-apple-darwin-cross:11.3.1"

[package.metadata.cross.target.x86_64-apple-darwin]
xargo = false
image = "freeznet/x86_64-apple-darwin-cross:11.3.1"
